// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu /> should render default (horizontal) Menu 1`] = `
<ul
  className="nice-menu"
  style={Object {}}
>
  <Item
    className="icon fa-home"
    current={true}
    disabled={false}
    href="#"
    label="Home"
    onClick={[Function]}
    style={Object {}}
    target={null}
  />
  <Item
    className="icon fa-map-pin"
    current={false}
    disabled={false}
    href="#"
    label="Cities"
    onClick={[Function]}
    style={Object {}}
    target={null}
  />
  <Item
    className={null}
    current={false}
    disabled={false}
    href="#"
    label="Regions"
    onClick={[Function]}
    style={Object {}}
    target={null}
  />
  <Item
    className="icon fa-globe"
    current={false}
    disabled={true}
    href="#"
    label="Countries"
    onClick={[Function]}
    style={Object {}}
    target={null}
  />
</ul>
`;

exports[`<Menu /> should render default (horizontal) Menu/Item with custom className/style 1`] = `
<ul
  className="nice-menu my-custom-class"
  style={
    Object {
      "top": 0,
    }
  }
>
  <Item
    className="icon fa-home"
    current={false}
    disabled={false}
    href="#"
    label="Home"
    onClick={null}
    style={
      Object {
        "bottom": 0,
      }
    }
    target={null}
  />
  <Item
    className="icon fa-map-pin"
    current={false}
    disabled={false}
    href="#"
    label="Cities"
    onClick={null}
    style={
      Object {
        "bottom": 0,
      }
    }
    target={null}
  />
</ul>
`;

exports[`<Menu /> should render stacked / narrow menu 1`] = `
<ul
  className="nice-menu has-icons narrow stacked"
  style={Object {}}
>
  <Item
    className="icon fa-home"
    current={true}
    disabled={false}
    href="#"
    label="Home"
    onClick={[Function]}
    style={Object {}}
    target={null}
  />
  <Item
    className="icon fa-map-pin"
    current={false}
    disabled={false}
    href="#"
    label="Cities"
    onClick={[Function]}
    style={Object {}}
    target={null}
  >
    <Item
      className={null}
      current={false}
      disabled={false}
      href="#"
      label="Amsterdam"
      onClick={[Function]}
      style={Object {}}
      target={null}
    />
    <Item
      className={null}
      current={false}
      disabled={false}
      href="#"
      label="Paris"
      onClick={[Function]}
      style={Object {}}
      target={null}
    />
    <Item
      className={null}
      current={false}
      disabled={true}
      href="#"
      label="Berlin"
      onClick={[Function]}
      style={Object {}}
      target={null}
    />
    <Item
      className={null}
      current={false}
      disabled={false}
      href="#"
      label="Rome"
      onClick={[Function]}
      style={Object {}}
      target={null}
    />
    <Item
      className={null}
      current={false}
      disabled={false}
      href="#"
      label="Madrid"
      onClick={[Function]}
      style={Object {}}
      target={null}
    />
  </Item>
  <Item
    className={null}
    current={false}
    disabled={false}
    href="#"
    label="Regions"
    onClick={[Function]}
    style={Object {}}
    target={null}
  />
  <Item
    className="icon fa-globe"
    current={false}
    disabled={true}
    href="#"
    label="Countries"
    onClick={[Function]}
    style={Object {}}
    target={null}
  />
</ul>
`;
